# Clutter25

./: .gitignore  Design.md  ExportScript.py  ModuleFiles.md  README.md  addToDB.py  createDatabase.sh  installHouPackage.py  installModFile.py  pyproject.toml
ClutterGUI/: ClutterUI.ui  main.py  pyproject.toml
NewGUI/: AddDialog.py  AddDialog.ui  ClutterUI.ui  ImageDataModel.py  InsertDialog.ui  TODO.md  main.py  pyproject.toml  sql_queries.py
scripts/: AddDialog.py  ClutterDialog.py  ClutterMain.py  ModelViewer.py  QUiLoaderMixin.py  README.md  TODO.md  TestMod.py  main.py  pyproject.toml  resources.qrc  resources_rc.py  sql_queries.py  test_db.py
scripts/NCCA/: __init__.py  mesh_functions.py  screenshot.py
scripts/ui/: ClutterUI.ui  ViewWidget.ui
