[project]
name = "clutterbase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.13",
    "mkdocstrings[python]>=0.29.1",
    "pyside6>=6.9.0",
    "qtpy>=2.4.3",
]

[tool.uv.workspace]
members=["CGHomeVersion","ClutterGUI", "Testproj","NewGUI", "testgl","scripts"]
